Inicio de escrita

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla cum iusto ipsam, labore adipisci repudiandae illum hic explicabo accusantium autem. Pariatur, enim tempora! Fuga ea laudantium unde, ratione maxime temporibus!</p>
         </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos asperiores doloribus quis minus rem provident veniam reprehenderit, incidunt reiciendis ex, quaerat sunt magnam excepturi commodi placeat. Magni delectus consequuntur et.</p>
     </article>
     </main>
 </body>
